--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
     <header>
         <h1>Welcome to SipHaven!</h1>
-        <button id="changeTextButton">CLICK HERE😊!</button>
+        <button id="changeTextButton">CLICK HERE 😊!</button>
     </header>
 
     <section class="gallery">
         <h2>Our Products</h2>
         <div id="productGallery">
-            <img src="image1.jpg" alt="Thermo Mug" class="product-image">
-            <img src="image2.jpg" alt="Flask" class="product-image">
-            <img src="image3.jpg" alt="Stanley Cup" class="product-image">
+            <img src="image1.jpg" alt="Product 1" class="product-image">
+            <img src="image2.jpg" alt="Product 2" class="product-image">
+            <img src="image3.jpg" alt="Product 3" class="product-image">
         </div>
     </section>
 
@@ -36,6 +36,7 @@
 
             <button type="submit">Submit</button>
         </form>
+        <div id="formFeedback"></div>
     </section>
 
     <script src="script.js"></script>
