--- a/index.html
+++ b/index.html
@@ -8,20 +8,37 @@
 </head>
 <body>
 
-    <header>
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#aboutUs">About Us</a></li>
+        </ul>
+    </nav>
+
+    <!-- Home Section -->
+    <header id="home">
         <h1>Welcome to SipHaven!</h1>
         <button id="changeTextButton">CLICK HERE 😊!</button>
     </header>
 
+    <!-- About Us Section -->
+    <section id="aboutUs">
+        <h2>About Us</h2>
+        <p>SipHaven is your one-stop destination for premium drinkware! Our collection includes high-quality bottles, mugs, and tumblers designed for style and functionality. Whether you're at home, in the office, or on the go, SipHaven has the perfect drinkware for you.</p>
+    </section>
+
+    <!-- Product Gallery Section -->
     <section class="gallery">
         <h2>Our Products</h2>
         <div id="productGallery">
-            <img src="image1.jpg" alt="Product 1" class="product-image">
-            <img src="image2.jpg" alt="Product 2" class="product-image">
-            <img src="image3.jpg" alt="Product 3" class="product-image">
+            <img src="image1.jpg" alt="Insulated Travel Mug" class="product-image">
+            <img src="image2.jpg" alt="Custom Water Bottle" class="product-image">
+            <img src="image3.jpg" alt="Eco-Friendly Tumbler" class="product-image">
         </div>
     </section>
 
+    <!-- Contact Form Section -->
     <section class="contact-form">
         <h2>Contact Us</h2>
         <form id="contactForm">
